feat: role precedence authorization
