# docs/swagger.yaml
@@ -133,6 +133,17 @@ definitions:
       version:
         type: integer
     type: object
+  store.Role:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -143,6 +154,8 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
       role_id:
         type: integer
       username:
@@ -379,7 +392,7 @@ paths:
       summary: Get Post
       tags:
       - Posts
-    put:
+    patch:
       consumes:
       - application/json
       description: Update the post by post ID
